# 21_projects

./: README.md
c++/containers/src/: Makefile  main.cc  s21_containers.h
c++/containers/src/list/: list_pass.cc
c++/containers/src/tests/: test_containers.cc
c++/containers/src/vector/: helpers.cc  main.cc  s21_ctor.cc  s21_vector.h  s21_vector_operators.cc
c++/matrix_21/: Makefile  helpers.cc  helpers.cpp  s21_cotr.cc  s21_cotr.cpp  s21_ctor.cc  s21_matrix_oop.cpp  s21_matrix_oop.h  s21_methods.cc  s21_methods.cpp  s21_operators.cc  s21_operators.cpp  s21_set_get.cc  s21_set_get.cpp
c++/matrix_21/test/: CMakeLists.txt  check.cpp  test_check.cpp
c++/matrix_21/tests/: CMakeLists.txt  test_check.cc  test_check.cpp
c/bash_utils/: README.md
c/bash_utils/src/cat/: Makefile  s21_cat.c  test_cat.sh
c/bash_utils/src/grep/: Makefile  pattern.txt  (+3 more)
c/decimal/: README.md
c/decimal/src/: Makefile  s21_compare.c  s21_conversion.c  s21_decimal.h  s21_helpers.c  s21_operators.c  s21_other.c
c/math/: README.md
c/math/src/: Makefile  s21_math.c  s21_math.h  s21_testcases.h  s21_tests.c
c/matrix/: README.md
c/matrix/src/: Makefile  s21_matrix.h
c/string/: README.md
c/string/src/: Makefile  s21_insert.c  s21_sprintf.c  s21_sprintf_source.c  s21_string.h  s21_strncmp.c
devops/easy_docker/: README.md  report.md
devops/easy_docker/part_1/: check.txt  inspect.txt
devops/easy_docker/part_2/: nginx.conf
devops/easy_docker/part_6/: docker-compose.yml
devops/linux_01/: README.md
devops/linux_network/: README.md
devops/linux_network/src/: report.md
(+70 files in other folders)
